# WindCalcer

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.cache/clangd/index/: UI.cpp.BA8E12C6EBADE8BF.idx  UI.h.EFBE451B36F8C7F8.idx  WindProData.cpp.FA74E28778DB62BA.idx  WindProData.h.1E0E522FA0D49E12.idx  file_dialog.cpp.7CA86499363F7B93.idx  file_dialog.h.CB66D6CD7B2AB5BB.idx  getWindProData.cpp.095FB6932442696C.idx  getWindProData.h.3CA03786387AE80C.idx  main.cpp.DA95E6B44A761155.idx  portable-file-dialogs.h.0625735AB67601D9.idx  test.cpp.946685D4E764737D.idx
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
include/: CMakeLists.txt
include/UI/: CMakeLists.txt  UI.h
include/data_collector/: CMakeLists.txt  WindProData.h  getWindProData.h
include/debug_tools/: CMakeLists.txt  debug_tools.h
include/file_dialog/: CMakeLists.txt  file_dialog.h
src/: CMakeLists.txt
src/UI/: CMakeLists.txt  UI.cpp
src/data_collector/: CMakeLists.txt  WindProData.cpp  getWindProData.cpp
src/debug_tools/: CMakeLists.txt  debug_tools.cpp
src/file_dialog/: CMakeLists.txt  file_dialog.cpp
tests/: CMakeLists.txt  test.cpp
